@@ -9,6 +9,11 @@ Version 0.9
   enhanced. You shouldn't get UnicodeErrors from it anymore if you
   don't give an encoding option.
 
+- Added 256-color terminal formatter.
+
+- Added ActionScript lexer.
+
+
 Version 0.8.1
 -------------
 (released Jun XX, 2007)
